[package]
name = "ghost_to_zola"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
